[gd_scene load_steps=16 format=3 uid="uid://d4hwcohpdl44x"]

[ext_resource type="Script" path="res://Scripts/Scenes/Jogos/jogo1_controller.gd" id="1_sjwyw"]
[ext_resource type="Resource" uid="uid://ds07i6e4vvqgs" path="res://Resources/Jogo 1/jogo1.tres" id="2_3lcda"]
[ext_resource type="AudioStream" uid="uid://bc240rb7sblyi" path="res://Audio/Instruções/Jogo 1.wav" id="3_cc05o"]
[ext_resource type="Theme" uid="uid://cothvl5gfbaww" path="res://themes/tema.tres" id="3_tsq0y"]
[ext_resource type="Theme" uid="uid://dduwhxbgsqkts" path="res://themes/botaoaudiopequeno.tres" id="4_f0qy7"]
[ext_resource type="Texture2D" uid="uid://dchv76lm0kqtf" path="res://Images/Jogo 1/audio icon2.svg" id="5_6mbt1"]
[ext_resource type="Texture2D" uid="uid://duvtrlavd8o2i" path="res://Images/seta icon.svg" id="6_xfctd"]
[ext_resource type="AudioStream" uid="uid://yog4a8cikohl" path="res://Audio/Parabens.wav" id="7_4qoid"]
[ext_resource type="AudioStream" uid="uid://f6o8n0xf263n" path="res://Audio/audio win.wav" id="7_xhlxp"]
[ext_resource type="AudioStream" uid="uid://lgns6wsensd7" path="res://Audio/audio wrong.wav" id="9_70e3n"]
[ext_resource type="StyleBox" uid="uid://bbsrdsjryc1x1" path="res://themes/botao 2.tres" id="11_14aju"]
[ext_resource type="Theme" uid="uid://bswic40glfpoi" path="res://themes/FONTE.tres" id="11_hmij5"]
[ext_resource type="Theme" uid="uid://d135j847anoft" path="res://themes/botaoaudio.tres" id="11_re3af"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pnirq"]
bg_color = Color(0.968627, 0.905882, 0.815686, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pki21"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_sjwyw")
game = ExtResource("2_3lcda")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="respostas" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.476
anchor_top = 0.5
anchor_right = 0.476
anchor_bottom = 0.5
offset_left = -174.48
offset_top = 83.0
offset_right = 199.52
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="Button" type="Button" parent="Control/respostas"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_tsq0y")
theme_override_font_sizes/font_size = 40

[node name="Button2" type="Button" parent="Control/respostas"]
clip_contents = true
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_tsq0y")
theme_override_font_sizes/font_size = 40

[node name="Imagem" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -211.0
offset_top = 114.0
offset_right = 205.0
offset_bottom = 430.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pnirq")

[node name="QuestionImage" type="TextureRect" parent="Control/Imagem"]
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="PALAVRA" type="AudioStreamPlayer" parent="Control/Imagem"]

[node name="audio1" type="Button" parent="Control"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
offset_left = -146.0
offset_top = 650.0
offset_right = -66.0
offset_bottom = 730.0
size_flags_horizontal = 3
theme = ExtResource("4_f0qy7")
theme_override_font_sizes/font_size = 30
icon = ExtResource("5_6mbt1")
expand_icon = true

[node name="audio 2" type="Button" parent="Control"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
offset_left = 66.0
offset_top = 650.0
offset_right = 146.0
offset_bottom = 730.0
size_flags_horizontal = 3
theme = ExtResource("4_f0qy7")
theme_override_font_sizes/font_size = 30
icon = ExtResource("5_6mbt1")
expand_icon = true

[node name="audio" type="HBoxContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -139.0
offset_top = -153.0
offset_right = -70.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 120

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Control"]

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
layout_mode = 2
offset_top = -4.0
offset_right = 482.0
offset_bottom = 802.0
color = Color(0.529412, 0.894118, 0.764706, 1)

[node name="Label" type="Label" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -242.0
offset_right = 242.0
offset_bottom = 484.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.168627, 0.168627, 0.168627, 1)
theme_override_font_sizes/font_size = 50
text = "Parabéns!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -31.0
offset_right = 168.0
offset_bottom = 267.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="jogar" type="Button" parent="Control/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_tsq0y")
theme_override_font_sizes/font_size = 30
text = "Jogar novamente"

[node name="menu" type="Button" parent="Control/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_tsq0y")
theme_override_font_sizes/font_size = 30
text = "Menu"

[node name="Parabéns" type="AudioStreamPlayer" parent="Control/ColorRect"]
stream = ExtResource("7_4qoid")

[node name="errado" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("9_70e3n")

[node name="certo" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("7_xhlxp")

[node name="Início" type="ColorRect" parent="Control"]
visible = false
layout_mode = 2
offset_left = -3.0
offset_top = 4.0
offset_right = 480.0
offset_bottom = 802.0
color = Color(0.968627, 0.905882, 0.815686, 1)

[node name="Button2" type="Button" parent="Control/Início"]
visible = false
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -170.0
offset_right = 92.5
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("11_re3af")
theme_override_colors/font_color = Color(0.141176, 0.137255, 0.14902, 1)
theme_override_colors/font_pressed_color = Color(0.141176, 0.137255, 0.14902, 1)
theme_override_colors/font_hover_color = Color(0.141176, 0.137255, 0.14902, 1)
theme_override_font_sizes/font_size = 130
text = "?"

[node name="Instruções" type="AudioStreamPlayer" parent="Control/Início"]
stream = ExtResource("3_cc05o")

[node name="Início2" type="ColorRect" parent="Control/Início"]
visible = false
layout_mode = 2
offset_left = -2.0
offset_top = -12.0
offset_right = 501.0
offset_bottom = 727.0
color = Color(0.631373, 0.580392, 0.505882, 1)

[node name="Button" type="Button" parent="Control/Início"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -94.0
offset_top = -240.0
offset_right = 98.0
offset_bottom = -138.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_tsq0y")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("11_14aju")
text = "Começar"

[node name="Label" type="Label" parent="Control/Início"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -220.5
offset_top = 99.0
offset_right = 221.5
offset_bottom = 196.0
grow_horizontal = 2
theme = ExtResource("11_hmij5")
text = "Como jogar"
horizontal_alignment = 1

[node name="voltar" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 24.0
offset_right = -127.0
offset_bottom = 102.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_pki21")
icon = ExtResource("6_xfctd")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Timer" type="Timer" parent="."]
wait_time = 13.0
one_shot = true

[connection signal="pressed" from="Control/audio1" to="." method="_on_audio_1_pressed"]
[connection signal="pressed" from="Control/audio 2" to="." method="_on_audio_2_pressed"]
[connection signal="pressed" from="Control/ColorRect/VBoxContainer/jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="Control/ColorRect/VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Control/Início/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/voltar" to="." method="_on_voltar_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
